fix formatting of video-container on mobile

--- a/app/assets/stylesheets/questions.scss
+++ b/app/assets/stylesheets/questions.scss
@@ -154,6 +154,14 @@ main {
     width: 100%;
     height: 100%;
   }
+
+  .vote-container {
+    min-width: 50px;
+  }
+
+  main {
+    padding: 0 5px;
+  }
 }
 
 @media only screen and (max-width: 800px) {
